modify and add new feature

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <main>
         <h1>My To Do List</h1>
         <input type="text">
-        <button>New</button>
+        <button class="new">New</button>
         <ul></ul>
     </main>
 </body>
